1.1.0
-----

Version 1.1.0 introduces one major breaking API change. The Table, Table.from_csv and TableSet.from_csv methods now all takes "column_names" and "column_types" as separate arguments instead of as a list of tuples. Was done to facilitate type inference and to streamline the API in various other places.

* TypeTester can now validate Python native types (not just strings). (#367)
* TypeTester can now be used with Table, not just Table.from_csv. (#350)
* Table, Table.from_csv and TableSet.from_csv now take column names and column types as separate parameters. (#350)
* agate.DEFAULT_NULL_VALUES (list of strings that mean null) is now public.
* Table.from_csv and Table.to_csv are now unicode-safe without using csvkit.
* agate can now be used as a drop-in replacement for Python's csv module.
* Migrated csvkit's unicode CSV reading/writing support into agate. (#354)

1.0.1
-----

* TypeTester now takes a "limit" arg that restricts how many rows it tests. (#332)
* Table.from_csv now supports CSVs with neither headers nor manual column names.
* Tables can now be created with automatically generated column names. (#331)
* File handles passed to Table.to_csv are now left open. (#330)
* Added Table.print_csv method. (#307, #339)
* Fixed stripping currency symbols when casting Numbers from strings. (#333)
* Fixed two major join issues. (#336)

1.0.0
------

* Table.from_csv now defaults to TypeTester() if column_info is not provided. (#324)
* New tutorial section: "Navigating table data" (#315)
* 100% test coverage reached. (#312)
* NullCalculationError is now a warning instead of an error. (#311)
* TableSet is now a subclass of MappedSequence.
* Rows and Columns are now subclasses of MappedSequence.
* Add Column.values_without_nulls_sorted().
* Column.get_data_without_nulls() is now Column.values_without_nulls().
* Column.get_data_sorted() is now Column.values_sorted().
* Column.get_data() is now Column.values().
* Columns can now be sliced.